@@ -1,3 +1,10 @@
+- when window is minimized, show app status in a notification
+- store .torrent files in local sandbox persistent storage (option)
+- store total bytes received in swarm list, and persist it for a while? (resume)
+- poll navigator.onLine sometimes ... ?
+- register idle change when app is open / foreground, so we can handle sleep/resume better
+- send keepalives or at least newstate think to sockets (sleep mode and they can stay connected?)
+- move calculate_speed into timer independent from UI render
 - store bitfield as binary string in local storage
 - show notification when update available, or when update was installed.
 - view file blob url make it in background
