@@ -1,3 +1,20 @@
+function debugSockets() {
+    chrome.sockets.tcp.getSockets( function(socketInfos) {
+        var d = {}
+        for (var i=0; i<socketInfos.length; i++) {
+            d[socketInfos[i].socketId] = socketInfos[i]
+        }
+        console.log('current tcp sockets',d)
+    })
+    chrome.sockets.udp.getSockets( function(socketInfos) {
+        var d = {}
+        for (var i=0; i<socketInfos.length; i++) {
+            d[socketInfos[i].socketId] = socketInfos[i]
+        }
+        console.log('current udp sockets',d)
+    })
+}
+
 var MAINWIN = 'mainWindow2'
 var DEVMODE = false
 if (! chrome.runtime.getManifest().update_url) { // remove this for prod, could cause crash
